--- a/.github/workflows/main_interseg.yml
+++ b/.github/workflows/main_interseg.yml
@@ -66,6 +66,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'INTERSEGS'
+          app-name: 'interseg'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_742C824F397C4EE4B1FB79028C39CBCE }}
